fixed white bar on smaller devices

--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ body {
 
 
 
+
 /*NAV BAR*/
 
 
@@ -135,7 +136,6 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    min-width: 250px;
     text-align: left;
     flex-basis: 50%;
 }
@@ -143,7 +143,6 @@ body {
 .front img {
     width: 540px;
     align-self: center;
-    margin-left: 250px;
 }
 
 .front h1{
@@ -764,8 +763,6 @@ select:focus{
         font-size: 1em;
     }
 }
-
-    
 
 
     
